--- a/client/index.html
+++ b/client/index.html
@@ -434,10 +434,10 @@
         </div>
         <!-- /.6-->
         <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-          <p>© 2018 Your name goes here. All rights reserved.</p>
+          <p>© Devin Gray | All rights reserved.</p>
         </div>
         <div class="col-12 mt-4">
-          <p class="template-bootstrapious">Template by <a
+          <p class="template-bootstrapious xsmall-font">Template by <a
               href='https://bootstrapious.com/p/bootstrap-carousel'>Bootstrapious</a> & <a
               href="https://fity.cz/ostrava">Fity</a></p>
           <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
