--- a/client/index.html
+++ b/client/index.html
@@ -426,11 +426,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center text-lg-left">
-          <p class="social"><a href="#" class="external facebook wow fadeInUp"><i class="fa fa-facebook"></i></a><a
-              href="#" data-wow-delay="0.2s" class="external instagram wow fadeInUp"><i
-                class="fa fa-instagram"></i></a><a href="#" data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i
-                class="fa fa-google-plus"></i></a><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"><i
-                class="fa fa-envelope"></i></a></p>
+          <p class="social">
+            <a href="https://www.linkedin.com/in/devin-gray-97441b193/" class="external bg-info wow fadeInUp"><i
+                class="fa fa-linkedin"></i></a>
+            <a href="https://github.com/devingrayt6" class="external social-links fadeInUp"><i
+                class="fa fa-github-square"></i></a>
+          </p>
         </div>
         <!-- /.6-->
         <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
