--- a/client/index.html
+++ b/client/index.html
@@ -46,13 +46,18 @@
           class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
         <div id="navbarcollapse" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Intro</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
+            <li class="nav-item"><a href="#intro" data-toggle="collapse" data-target="#navbarcollapse"
+                class="nav-link link-scroll">Intro</a></li>
+            <li class="nav-item"><a href="#about" data-toggle="collapse" data-target="#navbarcollapse"
+                class="nav-link link-scroll">About</a></li>
+            <li class="nav-item"><a href="#services" data-toggle="collapse" data-target="#navbarcollapse"
+                class="nav-link link-scroll">Services</a>
+            </li>
             <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
             <!-- <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li> -->
             <!-- <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li> -->
-            <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
+            <li class="nav-item"><a href="#contact" data-toggle="collapse" data-target="#navbarcollapse"
+                class="nav-link link-scroll">Contact</a></li>
           </ul>
         </div>
       </div>
